--- a/index.html
+++ b/index.html
@@ -36,10 +36,11 @@
     </main>
 
     <script src="script.js"></script>
-
-    <div class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="https://github.com/Jaime-Cont" target="_blank">Jaime Contemprato</a>.
-    </div>
+    <footer>
+      <div class="attribution">
+        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+        Coded by <a href="https://github.com/Jaime-Cont" target="_blank">Jaime Contemprato</a>.
+      </div>
+    </footer>
   </body>
 </html>
