Update index.html for screen reader

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <body>
     <main>
       <section class="input-section">
+        <h1 class="sr-only">Age Calculator App</h1>
         <form action="javascript:Calculate()">
           <label for="day-input" class="input-label day-label" id="day-label">DAY</label>
           <input type="number" id="day-input" name="day-input" placeholder="DD" class="input-number day-number">
