Update index.html for screen reader

--- a/index.html
+++ b/index.html
@@ -25,11 +25,12 @@
           <p class="input-error year-error" id="year-error-message"> </p>
           
           <div class="divider"></div>
-          <button class="submit-btn"></button>
+          <button class="submit-btn"><span class="sr-only">B</span></button>
         </form>
       </section>
       
       <section class="output-section">
+        <h1 class="sr-only">Age Calculator App</h1>
         <p><span class="purple-text" id="output-years">--</span> years</p>
         <p><span class="purple-text" id="output-months">--</span> months</p>
         <p><span class="purple-text" id="output-days">--</span> days</p>
